ve:add the ve drv

--- a/drivers/media/video/Kconfig
+++ b/drivers/media/video/Kconfig
@@ -1057,3 +1057,12 @@ config VIDEO_MEM2MEM_TESTDEV
 
 
 endif # V4L_MEM2MEM_DRIVERS
+config VIDEO_SUN4I_CEDAR
+       tristate "CEDAR driver for sun4i"
+       depends on ARCH_SUN4I
+       help
+         CEDAR driver for sun4i
+
+if VIDEO_SUN4I_CEDAR
+source "drivers/media/video/sun4i/Kconfig"
+endif
