--- a/sound/soc/Makefile
+++ b/sound/soc/Makefile
@@ -23,5 +23,6 @@ obj-$(CONFIG_SND_SOC)	+= txx9/
 obj-$(CONFIG_SND_SOC)	+= sun4i/
 obj-$(CONFIG_SND_SOC)	+= sun4i/hdmiaudio/
 obj-$(CONFIG_SND_SOC)	+= sun4i/spdif/
+obj-$(CONFIG_SND_SOC)	+= sun4i/i2s/
 
 
