config for kernel 3.0

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -732,4 +732,27 @@ config TOUCHSCREEN_TPS6507X
 	  To compile this driver as a module, choose M here: the
 	  module will be called tps6507x_ts.
 
+config  TOUCHSCREEN_GT801
+       tristate  "dpt microelctronics gt801 touchscreen driver"
+       depends on I2C
+       help
+          GT801 touchscreen driver
+config  TOUCHSCREEN_SUN4I_TS
+       tristate  "sun4i-ts touchscreen driver"
+       help
+           sun4i-ts touchscreen driver
+config TOUCHSCREEN_FT5X_TS
+       tristate  "ft5x touchscreen driver"
+       help
+         byd0x7ets touchscreen driver
+
+config  TOUCHSCREEN_ZT8031
+       tristate  "ZT8031 touchscreen driver"
+       help
+          ZT8031 touchscreen driver
+          
+config  TOUCHSCREEN_COASIA
+       tristate  "COASIA touchscreen driver"
+       help
+          COASIA touchscreen driver
 endif
