--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -61,3 +61,8 @@ obj-$(CONFIG_TOUCHSCREEN_WM97XX_MAINSTONE)	+= mainstone-wm97xx.o
 obj-$(CONFIG_TOUCHSCREEN_WM97XX_ZYLONITE)	+= zylonite-wm97xx.o
 obj-$(CONFIG_TOUCHSCREEN_W90X900)	+= w90p910_ts.o
 obj-$(CONFIG_TOUCHSCREEN_TPS6507X)	+= tps6507x-ts.o
+obj-$(CONFIG_TOUCHSCREEN_FT5X_TS) += ft5x_ts.o
+obj-$(CONFIG_TOUCHSCREEN_GT801)         += goodix_touch.o
+obj-$(CONFIG_TOUCHSCREEN_ZT8031)         += zt8031.o
+obj-$(CONFIG_TOUCHSCREEN_COASIA)         += coasia_i2c.o
+obj-$(CONFIG_TOUCHSCREEN_SUN4I_TS)         += sun4i-ts.o
