i2c debug: add i2c debug info
add SUN4I_IIC_PRINT_TRANSFER_INFO to memuconfig

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -605,6 +605,7 @@ config ARCH_TEGRA
 config ARCH_SUN4I
 	bool "AllWinner SUN4I Platform"
 	select CPU_V7
+    select ARM_AMBA
 	select HAVE_CLK
 	select CLKDEV_LOOKUP
 	select CLKSRC_MMIO
