wifi: mmc: add sdio wifi card's gpio management

--- a/drivers/mmc/Makefile
+++ b/drivers/mmc/Makefile
@@ -6,5 +6,6 @@ subdir-ccflags-$(CONFIG_MMC_DEBUG) := -DDEBUG
 
 obj-$(CONFIG_MMC)		+= core/
 obj-$(CONFIG_MMC)		+= card/
+obj-$(CONFIG_MMC)		+= mmc-pm/
 obj-$(CONFIG_MMC)		+= sunxi-host/
 
