uart: add sunxi's 8250 compatible driver support and fix some serial issues     1 add sunxi's 8250 compatible driver, just for uart1~7, uart0 uses boot config     2 change serial port type to DWAPB32 for busy status handling     3 disable CTS status detect when AutoFlowControl(AFE) enabled

--- a/drivers/tty/serial/Makefile
+++ b/drivers/tty/serial/Makefile
@@ -15,6 +15,7 @@ obj-$(CONFIG_SERIAL_SUNSU) += sunsu.o
 obj-$(CONFIG_SERIAL_SUNSAB) += sunsab.o
 
 obj-$(CONFIG_SERIAL_8250) += 8250.o
+obj-$(CONFIG_SERIAL_8250_SUNXI) += 8250_sunxi.o
 obj-$(CONFIG_SERIAL_8250_PNP) += 8250_pnp.o
 obj-$(CONFIG_SERIAL_8250_GSC) += 8250_gsc.o
 obj-$(CONFIG_SERIAL_8250_PCI) += 8250_pci.o
